<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">Real Estate</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="enter_address">Enter address...</string>
    <string name="locate">Locate</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_list_by">Sort Listing by</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="price_range">Price Range</string>
    <string name="property_type">Property Type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="parking_spaces">Parking spaces</string>
    <string name="min_land">Minimum land size</string>
    <string name="surroun_sberb">Surrounding suberbs</string>
    <string name="furnished">Furnished only</string>
    <string name="pets_allow">Pets allowed</string>
    <string name="smoke_permit">Smoke Permitted</string>
    <string name="rante_range">Ranting Range</string>
    <string name="search_now">Search Now</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="desc">Description</string>
    <string name="temp_txt">Real estate is property consisting of land and the buildings on it, along with its natural resources such as crops, minerals, or water; immovable property of this nature; an interest vested in this; (also) an item of real property; (more generally) buildings or housing in general. Also: the business of real estate; the profession of buying, selling, or renting land, buildings or housing.</string>
    <string name="inspections">Inspections/Auctions</string>
    <string name="search_area">Search this area</string>
</resources>
