<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/img1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/feed2" />
        <LinearLayout android:padding="@dimen/pad_5dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/txt_18sp" android:textStyle="bold" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$950,000 - $1,200,000" />
                <TextView android:textSize="@dimen/txt_12sp" android:textStyle="bold" android:textColor="@color/main_color_gray" android:id="@id/lbl2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_3dp" android:text="South Extenstion 324" />
                <TextView android:textSize="@dimen/txt_12sp" android:textColor="@color/main_color_gray" android:id="@id/lbl3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="15 Fair bank place" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/lbl4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6" android:drawableLeft="@drawable/ic_bed" style="@style/lbl_feed" />
                    <TextView android:id="@id/lbl5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_5dp" android:layout_marginRight="@dimen/pad_5dp" android:text="2" android:drawableLeft="@drawable/ic_bath" style="@style/lbl_feed" />
                    <TextView android:id="@id/lbl6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" android:drawableLeft="@drawable/ic_car" style="@style/lbl_feed" />
                </LinearLayout>
                <ImageView android:id="@id/img2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_10dp" android:src="@drawable/belle_icon" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.gms.maps.MapView android:id="@id/map" android:layout_width="fill_parent" android:layout_height="@dimen/pad_125dp" />
        <TextView android:textSize="@dimen/txt_18sp" android:textStyle="bold" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:paddingLeft="@dimen/pad_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_10dp" android:text="@string/desc" />
        <TextView android:textSize="@dimen/txt_13sp" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_10dp" android:layout_marginRight="@dimen/pad_10dp" android:text="@string/temp_txt" />
        <TextView android:textSize="@dimen/txt_18sp" android:textStyle="bold" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:paddingLeft="@dimen/pad_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_15dp" android:text="@string/inspections" />
        <View android:id="@id/view1" android:background="@color/gray_light" android:layout_width="fill_parent" android:layout_height="@dimen/divider" android:layout_marginTop="@dimen/pad_5dp" android:layout_marginBottom="@dimen/pad_5dp" />
        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_10dp" android:layout_marginRight="@dimen/pad_10dp">
            <TextView android:textSize="@dimen/txt_13sp" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="This set" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/txt_13sp" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="17th Mar 2014" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/txt_13sp" android:textStyle="bold" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1:00-3:00 pm" android:layout_weight="1.0" />
            <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_plus" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_10dp" android:layout_marginTop="@dimen/pad_5dp" android:layout_marginRight="@dimen/pad_10dp">
            <TextView android:textSize="@dimen/txt_13sp" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Next set" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/txt_13sp" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="27th Mar 2014" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/txt_13sp" android:textStyle="bold" android:textColor="@color/main_color_gray_dk" android:id="@id/lbl1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2:00-3:00 pm" android:layout_weight="1.0" />
            <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_plus" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:id="@id/view1" android:background="@color/gray_light" android:layout_width="fill_parent" android:layout_height="@dimen/divider" android:layout_marginTop="@dimen/pad_5dp" />
        <Button android:id="@id/btnContact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_agent" style="@style/green_btn" />
    </LinearLayout>
</ScrollView>